@@ -43,10 +43,11 @@ import simpleserver.thread.SystemInputQueue;
 
 public class MinecraftWrapper {
   private static final String DOWNLOAD_URL = "http://www.minecraft.net/download/minecraft_server.jar";
-  private static final String COMMAND_FORMAT = "java %s %s -jar %s nogui";
+  private static final String COMMAND_FORMAT = "java %s -jar %s %s nogui";
   private static final String MEMORY_FORMAT = "-Xmx%sM -Xms%sM";
   private static final String XINCGC_FORMAT = "-Xincgc -Xmx%sM";
-  private static final String BUKKIT_ARGUMENTS = "-Djline.terminal=jline.UnsupportedTerminal";
+  private static final String DEFAULT_ARGUMENTS = "-server -XX:+AggressiveOpts";
+  private static final String BUKKIT_ARGUMENTS = "-nojline";
   private static final String SERVER_JAR = "minecraft_server.jar";
   private static final int MINIMUM_MEMORY = 1024;
 
@@ -84,45 +85,38 @@ public class MinecraftWrapper {
 
       try {
         responseBody = httpclient.execute(httpget, responseHandler);
-      }
-      catch (ClientProtocolException e) {
+      } catch (ClientProtocolException e) {
+        autodownloadError(e, "download");
+        return false;
+      } catch (IOException e) {
         autodownloadError(e, "download");
         return false;
       }
-      catch (IOException e) {
-        autodownloadError(e, "download");
-        return false;
-      }
-    }
-    finally {
+    } finally {
       httpclient.getConnectionManager().shutdown();
     }
 
     OutputStream outputFile;
     try {
       outputFile = new FileOutputStream(SERVER_JAR);
-    }
-    catch (FileNotFoundException e) {
+    } catch (FileNotFoundException e) {
       autodownloadError(e, "save");
       return false;
     }
 
     try {
       outputFile.write(responseBody.getBytes("ISO-8859-1"));
-    }
-    catch (UnsupportedEncodingException e) {
+    } catch (UnsupportedEncodingException e) {
       autodownloadError(e, "save");
       return false;
-    }
-    catch (IOException e) {
+    } catch (IOException e) {
       autodownloadError(e, "save");
       return false;
     }
 
     if (verifyMinecraftJar()) {
       return true;
-    }
-    else {
+    } else {
       System.out.println("[SimpleServer] " + SERVER_JAR + " is corrupt!");
       return false;
     }
@@ -135,8 +129,7 @@ public class MinecraftWrapper {
 
     try {
       minecraft = runtime.exec(command);
-    }
-    catch (IOException e) {
+    } catch (IOException e) {
       System.out.println("[SimpleServer] " + e);
       System.out.println("[SimpleServer] FATAL ERROR: Could not start minecraft_server.jar!");
       System.exit(-1);
@@ -174,8 +167,7 @@ public class MinecraftWrapper {
       try {
         wrapper.join();
         wrappers.remove(wrapper);
-      }
-      catch (InterruptedException e) {
+      } catch (InterruptedException e) {
       }
     }
     active = false;
@@ -187,25 +179,27 @@ public class MinecraftWrapper {
 
   private String getCommand() {
     int minimumMemory = MINIMUM_MEMORY;
+    String arguments = "";
+
+    if (options.contains("javaArguments")) {
+      arguments = options.get("javaArguments");
+    }
+
     if (options.getInt("memory") < minimumMemory) {
       minimumMemory = options.getInt("memory");
     }
 
-    String arguments;
-    if (options.getBoolean("overwriteArguments")) {
-      arguments = "";
-    }
-    else {
+    if (!options.getBoolean("overwriteArguments")) {
+      String memoryArgs;
       if (options.getBoolean("useXincgc")) {
-        arguments = String.format(XINCGC_FORMAT, options.get("memory"));
+        memoryArgs = String.format(XINCGC_FORMAT, options.get("memory"));
+      } else {
+        memoryArgs = String.format(MEMORY_FORMAT, minimumMemory, options.get("memory"));
       }
-      else {
-        arguments = String.format(MEMORY_FORMAT, minimumMemory, options.get("memory"));
-      }
-      arguments += modArguments();
+      arguments = String.format("%s %s %s", arguments, memoryArgs, DEFAULT_ARGUMENTS);
     }
 
-    return String.format(COMMAND_FORMAT, options.get("javaArguments"), arguments, getServerJar());
+    return String.format(COMMAND_FORMAT, arguments, getServerJar(), modArguments());
   }
 
   private String modArguments() {
@@ -233,8 +227,7 @@ public class MinecraftWrapper {
       ZipFile jar = new ZipFile(SERVER_JAR);
       valid = jar.size() > 200;
       jar.close();
-    }
-    catch (IOException e) {
+    } catch (IOException e) {
     }
 
     return valid;
